server/ecs/cloudformation/khulnasoft-ecs-ec2/khulnasoftEcs-external.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  This AWS CloudFormation template installs the Khulnasoft Command Center componants
  in ECS EC2.
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label:
          default: ECS Infrastructure Configuration
        Parameters:
          - ECSClusterName
          - VpcId
          - VpcCidr
          - EcsInstanceSubnets
          - LbSubnets
          - SSLCert
          - LBScheme
      - Label:
          default: Khulnasoft Security Configuration
        Parameters:
          - KhulnasoftConsoleAccess
          - KhulnasoftServerImage
          - KhulnasoftGatewayImage
          - KhulnasoftEnforcerImage
          - BatchInstallToken
          - ActiveActive
          - Taskprivileged
      - Label:
          default: Khulnasoft Manage DB Configuration
        Parameters:
          - KhulnasoftDBInstanceEndPointURL
          - KhulnasoftDBUserName
          - KhulnasoftDBPassword
          - AuditRDS
          - AuditDBInstanceEndPointURL
          - AuditDBUserName  
          - AuditDBPassword  
    ParameterLabels:
      ECSClusterName:
        default: ECS cluster name
      VpcId:
        default: VPC ID
      VpcCidr:
        default: VPC CIDR
      EcsInstanceSubnets:
        default: ECS Instance Subnets
      LbSubnets:
        default: Khulnasoft LB Subnets
      KhulnasoftConsoleAccess:
        default: Web Console Source
      SSLCert:
        default: SSL cert ARN
      Taskprivileged:
        default: Task Privileged
Parameters:
  BatchInstallToken:
    Type: String
    Description: A string used as the token in the Khulnasoft Enforcer Install command.
  KhulnasoftServerImage:
    Type: String
    Description: Enter server image path on ECR
  KhulnasoftGatewayImage:
    Type: String
    Description: Enter gateway image path on ECR
  KhulnasoftEnforcerImage:
    Type: String
    Description: Enter enforcer image path on ECR
  ECSClusterName:
    Description: Existing ECS cluster name
    Type: String
    MinLength: '5'
    MaxLength: '25'
  EcsSecurityGroupId:
    Type: 'AWS::EC2::SecurityGroup::Id'
    Description: The security group assigned to the ECS cluster or ECS Instances during cluster creation
  VpcId:
    Description: VpcId to deploy into
    Type: 'AWS::EC2::VPC::Id'
  VpcCidr:
    Description: 'For use by load balancer service polling. Enter VPC CIDR. Ex: 10.0.0.0/16'
    Type: String
  EcsInstanceSubnets:
    Type: 'List<AWS::EC2::Subnet::Id>'
    Description: Select all the subnets ECS utilizes
    ConstraintDescription: >-
      Password must be at least 9 characters long and have 3 out of the
      following: one number, one lower case, one upper case, or one special
      character.
  LbSubnets:
    Type: 'List<AWS::EC2::Subnet::Id>'
    Description: Select external ones if you need internet access.
  LBScheme:
    Type: String
    Default: internet-facing
    AllowedValues:
      - internet-facing
      - internal
  KhulnasoftConsoleAccess:
    Description: The Default(0.0.0.0/0) CIDR range will provide global access for Khulnasoft Console. Please update your own IP address or CIDR range to restric the Khulnasoft Console access.
    Default: 0.0.0.0/0
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x
  KhulnasoftDBInstanceEndPointURL:
    Description: Enter Endpoint URL of Khulnasoft DB
    Type: String
  KhulnasoftDBUserName:
    Description: Enter Khulnasoft DB User name
    Type: String
  KhulnasoftDBPassword:
    NoEcho: true
    Description: Enter Khulnasoft DB password
    Type: String
  AuditRDS:
    Description: Select Yes if you are having a seperate RDS endpoing for Audit
    Default: 'No'
    Type: String
    AllowedValues: ['Yes', 'No']
  AuditDBInstanceEndPointURL:
    Description: Enter Endpoint URL of Audit DB
    Type: String
  AuditDBUserName:
    Description: Enter Audit DB User name
    Type: String
  AuditDBPassword:
    NoEcho: true
    Description: Enter Audit DB password
    Type: String
  SSLCert:
    Type: String
    Description: ARN of the SSL cert to be used with console web UI LB
  ActiveActive:
    Description: Active Active configuration for khulnasoft console
    Type: String
    Default: 'false'
    AllowedValues:
      - 'true'
      - 'false'
  Taskprivileged:
    Description: Select false to run enforcer in non-privileged mode. defualt is privileged mode.
    Type: String 
    Default: 'true'
    AllowedValues:  
      - 'true'
      - 'false' 
Conditions:
  CreateActiveActive: !Equals [ !Ref ActiveActive, 'true' ]
  NotCreateActiveActive: !Equals [ !Ref ActiveActive, 'false' ]
  CreateAuditrds: !Equals [!Ref AuditRDS, 'Yes']
  ReplaceAuditrds: !Equals [!Ref AuditRDS, 'No']
Resources:
  #Role for generating a Random string
  LambdaExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: allowLambdaLogging
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: "Allow"
                Action:
                  - "logs:*"
                Resource: "*"
  #Function for generating a Random string
  RandomStringLambdaFunction:
    Type: AWS::Lambda::Function
    Properties:
      Handler: index.lambda_handler
      Timeout: 10
      Role: !GetAtt "LambdaExecutionRole.Arn"
      Runtime: python3.9
      Code:
        ZipFile: |
          import cfnresponse
          from random import choice
          from string import ascii_lowercase, digits
          def random_string(length=8, chars=ascii_lowercase + digits):
            return "".join(choice(chars) for x in range(length))
          def lambda_handler(event, context):
            print(f"Data in event: {event}")
            response_data = {}
            if event["RequestType"] == "Create":
              string_length = int(event["ResourceProperties"]["Length"])
              physicalResourceId = random_string(string_length)
              response_data = { "RandomString": physicalResourceId }
            
            else: # if event["RequestType"] == "Update" or event["RequestType"] == "Delete":
              physicalResourceId = event["PhysicalResourceId"]
            cfnresponse.send(event, context, cfnresponse.SUCCESS, response_data, physicalResourceId)
  RandomString:
   Type: AWS::CloudFormation::CustomResource
   Properties:
     Length: 5
     ServiceToken: !GetAtt RandomStringLambdaFunction.Arn
  KhulnasoftConsoleLB:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    DependsOn:
      - EcsSecurityGroupIngress1
      - EcsSecurityGroupIngress2
      - EcsSecurityGroupIngress3
      - EcsSecurityGroupIngress4
      - EcsSecurityGroupIngress5
      - KhulnasoftConsoleSecurityGroup
    Properties:
      Name: !Join ["-", ["KhulnasoftConsoleLB", !GetAtt RandomString.RandomString]]
      Scheme: !Ref LBScheme
      SecurityGroups:
        - !Ref KhulnasoftConsoleSecurityGroup
      Subnets: !Ref LbSubnets
      Type: application
  KhulnasoftConsoleTaskDefinition:
    Type: 'AWS::ECS::TaskDefinition'
    DependsOn:
      - SecretU
      - SecretP
      - KhulnasoftEcsTaskRole
      - KhulnasoftConsoleLogs
    Properties:
      Family: !Join ["-", ["khulnasoft-console", !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
      RequiresCompatibilities:
        - EC2
      Volumes:
        - Host:
            SourcePath: /var/run/docker.sock
          Name: docker-socket
      ContainerDefinitions:
        - Name: !Join ["-", ["khulnasoft-console", !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
          Image: !Ref KhulnasoftServerImage
          Cpu: '1024'
          Ulimits:
            - Name: nofile
              SoftLimit: '1048576'
              HardLimit: '1048576'
          MountPoints:
            - ContainerPath: /var/run/docker.sock
              SourceVolume: docker-socket
          PortMappings:
            - ContainerPort: '8080'
              HostPort: '8080'
              Protocol: tcp
            - ContainerPort: '8443'
              HostPort: '8443'
              Protocol: tcp
          Memory: '2048'
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Join ['-', ['/khulnasoft/console', !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
              awslogs-region: !Ref "AWS::Region"
              awslogs-stream-prefix: khulnasoftConsole
          Essential: 'true'
          Secrets:
            - Name: SCALOCK_DBPASSWORD
              ValueFrom: !Ref SecretP
            - Name: SCALOCK_AUDIT_DBPASSWORD
              ValueFrom: !If [CreateAuditrds, !Ref SecretAuditP, !Ref SecretP]
            - Name: SCALOCK_DBUSER
              ValueFrom: !Ref SecretU
            - Name: SCALOCK_AUDIT_DBUSER
              ValueFrom: !If [CreateAuditrds, !Ref SecretAuditU, !Ref SecretU]
            - Name: BATCH_INSTALL_TOKEN
              ValueFrom: !Ref Secret1
            - Name: KHULNASOFT_PUBSUB_DBPASSWORD
              ValueFrom: !Ref SecretP
            - Name: KHULNASOFT_PUBSUB_DBUSER
              ValueFrom: !Ref SecretU
          Environment:
            - Name: SCALOCK_LOG_LEVEL
              Value: DEBUG
            - Name: KHULNASOFT_GRPC_MODE
              Value: 1
            - Name: SCALOCK_DBSSL
              Value: require
            - Name: SCALOCK_AUDIT_DBSSL
              Value: require
            - Name: SCALOCK_DBNAME
              Value: scalock
#            - Name: BATCH_INSTALL_NAME
#              Value: ECS
#            - Name: BATCH_INSTALL_GATEWAY
#              Value: !GetAtt KhulnasoftConsoleLB.DNSName
            - Name: SCALOCK_DBHOST
              Value: !Ref KhulnasoftDBInstanceEndPointURL
            - Name: SCALOCK_AUDIT_DBNAME
              Value: slk_audit
            - Name: SCALOCK_AUDIT_DBHOST
              Value: !If [CreateAuditrds, !Ref AuditDBInstanceEndPointURL, !Ref KhulnasoftDBInstanceEndPointURL]
            - Name: KHULNASOFT_PUBSUB_DBSSL
              Value: !If [CreateActiveActive, require, !Ref "AWS::NoValue"]
            - Name: KHULNASOFT_PUBSUB_DBNAME
              Value: !If [CreateActiveActive, pubsub, !Ref "AWS::NoValue"]
            - Name: KHULNASOFT_PUBSUB_DBHOST
              Value: !If [CreateActiveActive, !Ref KhulnasoftDBInstanceEndPointURL, !Ref "AWS::NoValue"]
            - Name: KHULNASOFT_CLUSTER_MODE
              Value: !If [CreateActiveActive, active-active, !Ref "AWS::NoValue"]
      NetworkMode: bridge
      TaskRoleArn: !Ref KhulnasoftEcsTaskRole
      ExecutionRoleArn: !Ref KhulnasoftEcsTaskRole
  KhulnasoftConsoleService:
    Type: 'AWS::ECS::Service'
    DependsOn:
      - KhulnasoftConsoleTaskDefinition
      - KhulnasoftConsoleListener
      - KhulnasoftConsoleGrpcListener
    Properties:
      Cluster: !Ref ECSClusterName
      LaunchType: EC2
      ServiceName: !Join ["-", ["khulnasoft-console", !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
      DesiredCount: 1
      PlacementStrategies:
        - Type: spread
          Field: 'attribute:ecs.availability-zone'
        - Type: spread
          Field: instanceId
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 100
      LoadBalancers:
        - ContainerName: !Join ["-", ["khulnasoft-console", !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
          ContainerPort: 8080
          TargetGroupArn: !Ref KhulnasoftConsoleTargetGroup
        - ContainerName: !Join ["-", ["khulnasoft-console", !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
          ContainerPort: 8443
          TargetGroupArn: !Ref KhulnasoftConsoleGrpcTargetGroup
      TaskDefinition: !Ref KhulnasoftConsoleTaskDefinition
  KhulnasoftConsoleListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    DependsOn:
      - KhulnasoftConsoleTargetGroup
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref KhulnasoftConsoleTargetGroup
      LoadBalancerArn: !Ref KhulnasoftConsoleLB
      Port: '443'
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref SSLCert
      SslPolicy: ELBSecurityPolicy-FS-1-2-Res-2019-08
  KhulnasoftConsoleGrpcListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    DependsOn:
      - KhulnasoftConsoleGrpcTargetGroup
      - KhulnasoftConsoleLB
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref KhulnasoftConsoleGrpcTargetGroup
      LoadBalancerArn: !Ref KhulnasoftConsoleLB
      Port: '8442'
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref SSLCert
      SslPolicy: ELBSecurityPolicy-FS-1-2-Res-2019-08
  KhulnasoftConsoleTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    DependsOn:
      - KhulnasoftConsoleLB
    Properties:
      TargetType: instance
      HealthCheckIntervalSeconds: 30
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 2
      Matcher:
        HttpCode: '200'
      Name: !Join ["-", ["khulnasoft-console", !Join ["-", ["tg", !GetAtt RandomString.RandomString]]]]
      Port: '8080'
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '60'
      UnhealthyThresholdCount: 3
      VpcId: !Ref VpcId
  KhulnasoftConsoleGrpcTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    DependsOn:
      - KhulnasoftConsoleLB
    Properties:
      TargetType: instance
      HealthCheckIntervalSeconds: 30
      HealthCheckProtocol: HTTPS
      HealthyThresholdCount: 2
      HealthCheckPath: "/"
      Matcher:
        GrpcCode: '0-99'
      Name: !Join ["-", ["khulnasoft-console", !Join ["-", ["grpc-tg", !GetAtt RandomString.RandomString]]]]
      Port: '8443'
      Protocol: HTTPS
      ProtocolVersion: GRPC
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '60'
      UnhealthyThresholdCount: 2
      VpcId: !Ref VpcId
  KhulnasoftGatewayGrpcListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    DependsOn:
      - KhulnasoftConsoleGrpcTargetGroup
      - KhulnasoftConsoleLB
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref KhulnasoftGatewayGrpcTargetGroup
      LoadBalancerArn: !Ref KhulnasoftConsoleLB
      Port: '8443'
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref SSLCert
      SslPolicy: ELBSecurityPolicy-FS-1-2-Res-2019-08
  KhulnasoftGatewayGrpcTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    DependsOn:
      - KhulnasoftConsoleLB
    Properties:
      TargetType: instance
      HealthCheckIntervalSeconds: 30
      HealthCheckProtocol: HTTPS
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      HealthCheckPath: "/"
      Matcher:
        GrpcCode: '0-99'
      Name: !Join ["-", ["khulnasoft-gateway", !Join ["-", ["grpc-tg", !GetAtt RandomString.RandomString]]]]
      Port: '8443'
      Protocol: HTTPS
      ProtocolVersion: GRPC
      VpcId: !Ref VpcId
  KhulnasoftGatewayHealthListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    DependsOn:
      - KhulnasoftConsoleGrpcTargetGroup
      - KhulnasoftConsoleLB
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref KhulnasoftGatewayHealthTargetGroup
      LoadBalancerArn: !Ref KhulnasoftConsoleLB
      Port: '8089'
      Protocol: HTTP
  KhulnasoftGatewayHealthTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    DependsOn:
      - KhulnasoftConsoleLB
    Properties:
      TargetType: instance
      HealthCheckIntervalSeconds: 30
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 2
      Matcher:
        HttpCode: '200'
      Name: !Join ["-", ["khulnasoft-gateway", !Join ["-", ["health-tg", !GetAtt RandomString.RandomString]]]]
      Port: '8089'
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '60'
      UnhealthyThresholdCount: 3
      VpcId: !Ref VpcId
  KhulnasoftGatewayTaskDefinition:
    Type: 'AWS::ECS::TaskDefinition'
    DependsOn:
      - SecretU
      - SecretP
      - KhulnasoftEcsTaskRole
      - KhulnasoftGatewayLogs
    Properties:
      Family: !Join ["-", ["khulnasoft-gateway", !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
      TaskRoleArn: !Ref KhulnasoftEcsTaskRole
      ExecutionRoleArn: !Ref KhulnasoftEcsTaskRole
      RequiresCompatibilities:
        - EC2
      ContainerDefinitions:
        - Name: !Join ["-", ["khulnasoft-gateway", !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
          Image: !Ref KhulnasoftGatewayImage
          Ulimits:
            - Name: nofile
              SoftLimit: '1048576'
              HardLimit: '1048576'
          PortMappings:
            - ContainerPort: '8443'
              HostPort: '8443'
              Protocol: tcp
            - ContainerPort: '8089'
              HostPort: '8089'
              Protocol: tcp
          Cpu: '1024'
          Memory: '2048'
          Essential: 'true'
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Join ['-', ['/khulnasoft/gateway', !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
              awslogs-region: !Ref "AWS::Region"
              awslogs-stream-prefix: khulnasoftGateway
          Secrets:
            - Name: SCALOCK_DBPASSWORD
              ValueFrom: !Ref SecretP
            - Name: SCALOCK_AUDIT_DBPASSWORD
              ValueFrom: !If [CreateAuditrds, !Ref SecretAuditP, !Ref SecretP]
            - Name: SCALOCK_DBUSER
              ValueFrom: !Ref SecretU
            - Name: SCALOCK_AUDIT_DBUSER
              ValueFrom: !If [CreateAuditrds, !Ref SecretAuditU, !Ref SecretU]
          Environment:
            - Name: SCALOCK_LOG_LEVEL
              Value: DEBUG
            - Name: SCALOCK_DBSSL
              Value: require
            - Name: SCALOCK_AUDIT_DBSSL
              Value: require
            - Name: HEALTH_MONITOR
              Value: '0.0.0.0:8089'
            - Name: SCALOCK_DBNAME
              Value: scalock
            - Name: SCALOCK_DBHOST
              Value: !Ref KhulnasoftDBInstanceEndPointURL
            - Name: SCALOCK_AUDIT_DBNAME
              Value: slk_audit
            - Name: SCALOCK_AUDIT_DBHOST
              Value: !If [CreateAuditrds, !Ref AuditDBInstanceEndPointURL, !Ref KhulnasoftDBInstanceEndPointURL]
            - Name: KHULNASOFT_CONSOLE_SECURE_ADDRESS
              Value: !Join ["", [!GetAtt KhulnasoftConsoleLB.DNSName, ":8442"]]
      NetworkMode: bridge
  KhulnasoftGatewayService:
    Type: 'AWS::ECS::Service'
    DependsOn:
      - KhulnasoftGatewayTaskDefinition
      - KhulnasoftConsoleLB
      - KhulnasoftGatewayHealthListener
      - KhulnasoftGatewayHealthTargetGroup
      - KhulnasoftGatewayGrpcListener
      - KhulnasoftGatewayGrpcTargetGroup
      - EcsSecurityGroupIngress4
    Properties:
      Cluster: !Ref ECSClusterName
      ServiceName: !Join ["-", ["khulnasoft-gateway", !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
      DesiredCount: 1
      PlacementStrategies:
        - Type: spread
          Field: 'attribute:ecs.availability-zone'
        - Type: spread
          Field: instanceId
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 100
      LoadBalancers:
        - ContainerName: !Join ["-", ["khulnasoft-gateway", !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
          ContainerPort: '8443'
          TargetGroupArn: !Ref KhulnasoftGatewayGrpcTargetGroup
        - ContainerName: !Join ["-", ["khulnasoft-gateway", !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
          ContainerPort: '8089'
          TargetGroupArn: !Ref KhulnasoftGatewayHealthTargetGroup
      TaskDefinition: !Ref KhulnasoftGatewayTaskDefinition
  KhulnasoftEnforcerTaskDefinition:
    Type: 'AWS::ECS::TaskDefinition'
    DependsOn:
      - KhulnasoftGatewayService
      - KhulnasoftEcsTaskRole
      - Secret1
    Properties:
      PidMode: 'host'
      ContainerDefinitions:
        - Memory: '1024'
          Essential: 'true'
          MountPoints:
            - ContainerPath: /var/run
              SourceVolume: var-run
            - ContainerPath: /dev
              SourceVolume: dev
            - ContainerPath: /host/opt/khulnasoft
              SourceVolume: khulnasoft
              ReadOnly: true
            - ContainerPath: /opt/khulnasoft/tmp
              SourceVolume: khulnasoft-tmp
            - ContainerPath: /opt/khulnasoft/audit
              SourceVolume: khulnasoft-audit
            - ContainerPath: /data
              SourceVolume: data
            - ContainerPath: /host/proc
              SourceVolume: proc
              ReadOnly: true
            - ContainerPath: /host/sys
              SourceVolume: sys
              ReadOnly: true
            - ContainerPath: /host/etc
              SourceVolume: etc
              ReadOnly: true
          Name: khulnasoft-enforcer
          Privileged: !Ref Taskprivileged
          LinuxParameters:
            Capabilities:
              ADD:
                - SYS_ADMIN
                - NET_ADMIN
                - NET_RAW
                - SYS_PTRACE
                - KILL
                - MKNOD
                - SETGID
                - SETUID
                - SYS_MODULE
                - AUDIT_CONTROL
                - SYSLOG
                - SYS_CHROOT
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Join ['-', ['/khulnasoft/enforcer', !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
              awslogs-region: !Ref "AWS::Region"
              awslogs-stream-prefix: khulnasoftEnforcer
          Secrets:
            - Name: KHULNASOFT_TOKEN
              ValueFrom: !Ref Secret1
          Environment:
            - Name: KHULNASOFT_SERVER
              Value: !Join [":", [!GetAtt KhulnasoftConsoleLB.DNSName, "8443"]]
            - Name: SILENT
              Value: 'yes'
            - Name: RESTART_CONTAINERS
              Value: 'no'
            - Name: KHULNASOFT_LOGICAL_NAME
              Value: !Join ["-", [!Join ["-", ["khulnasoft-enf-td", !GetAtt RandomString.RandomString]], "ECS"]]
          Image: !Ref KhulnasoftEnforcerImage
          Cpu: '512'
      Volumes:
        - Host:
            SourcePath: /var/run
          Name: var-run
        - Host:
            SourcePath: /dev
          Name: dev
        - Host:
            SourcePath: /opt/khulnasoft/data
          Name: data
        - Host:
            SourcePath: /opt/khulnasoft
          Name: khulnasoft
        - Host:
            SourcePath: /opt/khulnasoft/tmp
          Name: khulnasoft-tmp
        - Host:
            SourcePath: /opt/khulnasoft/audit
          Name: khulnasoft-audit
        - Host:
            SourcePath: /proc
          Name: proc
        - Host:
            SourcePath: /sys
          Name: sys
        - Host:
            SourcePath: /etc
          Name: etc
      Family: !Join ["-", ["khulnasoft-enforcer", !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
      ExecutionRoleArn: !Ref KhulnasoftEcsTaskRole
  KhulnasoftEnforcerDaemon:
    DependsOn:
      - KhulnasoftEnforcerTaskDefinition
    Type: 'AWS::ECS::Service'
    Properties:
      Cluster: !Ref ECSClusterName
      SchedulingStrategy: DAEMON
      ServiceName: !Join ["-", ["khulnasoft-enforcer", !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
      TaskDefinition: !Ref KhulnasoftEnforcerTaskDefinition
  KhulnasoftConsoleSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Allow access to Khulnasoft Console Instances
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: !Ref KhulnasoftConsoleAccess
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: !Ref KhulnasoftConsoleAccess
        - IpProtocol: tcp
          FromPort: '8443'
          ToPort: '8443'
          CidrIp: !Ref KhulnasoftConsoleAccess
        - IpProtocol: tcp
          FromPort: '8442'
          ToPort: '8442'
          CidrIp: !Ref KhulnasoftConsoleAccess
        - IpProtocol: tcp
          FromPort: '8089'
          ToPort: '8089'
          CidrIp: !Ref KhulnasoftConsoleAccess
  EcsSecurityGroupIngress1:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Description: Allows inbound port 8080 from VPC to console.
    Properties:
      GroupId: !Ref EcsSecurityGroupId
      CidrIp: !Ref VpcCidr
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080
  EcsSecurityGroupIngress2:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Description: Allows inbound port 80 from VPC to gateways for LB health check.
    Properties:
      GroupId: !Ref EcsSecurityGroupId
      CidrIp: !Ref VpcCidr
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
  EcsSecurityGroupIngress3:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Description: Allows inbound port 8442 from VPC to console Grpc.
    Properties:
      GroupId: !Ref EcsSecurityGroupId
      CidrIp: !Ref VpcCidr
      IpProtocol: tcp
      FromPort: 8442
      ToPort: 8442
  EcsSecurityGroupIngress4:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Description: Allows inbound port 8443 from VPC to gateway Grpc.
    Properties:
      GroupId: !Ref EcsSecurityGroupId
      CidrIp: !Ref VpcCidr
      IpProtocol: tcp
      FromPort: 8443
      ToPort: 8443
  EcsSecurityGroupIngress5:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Description: Allows inbound port 8089 from VPC to GW health check.
    Properties:
      GroupId: !Ref EcsSecurityGroupId
      CidrIp: !Ref VpcCidr
      IpProtocol: tcp
      FromPort: 8089
      ToPort: 8089
  KhulnasoftEcsTaskRole:
    Type: 'AWS::IAM::Role'
    Properties:
      RoleName: !Join ["-", ["KhulnasoftEcsTaskRole", !GetAtt RandomString.RandomString]]
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: !Join ["-", ["KhulnasoftScannerPolicy", !GetAtt RandomString.RandomString]]
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - 'ecr:GetDownloadUrlForLayer'
                  - 'ecr:BatchGetImage'
                  - 'ecr:DescribeImages'
                  - 'ecr:GetAuthorizationToken'
                  - 'ecr:DescribeRepositories'
                  - 'ecr:ListImages'
                  - 'ecr:BatchCheckLayerAvailability'
                  - 'ecr:GetRepositoryPolicy'
                  - 'logs:CreateLogStream'
                  - 'logs:PutLogEvents'
                  - 'logs:CreateLogGroup'
                  - 'logs:PutLogEvents'
                  - 'logs:CreateLogDelivery'
                  - 'logs:CreateLogStream'
                  - 'logs:TagLogGroup'
                Resource: '*'
              - !Ref 'AWS::NoValue'
        - PolicyName:  !Join ["-", ["KhulnaSoftretsManagerPolicy", !GetAtt RandomString.RandomString]]
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - 'secretsmanager:GetSecretValue'
                Resource:
                  - !Ref SecretP
                  - !Ref Secret1
                  - !Ref SecretU
                  - !Ref SecretAuditU
                  - !Ref SecretAuditP
        - PolicyName: !Join ["-", ["KMSPermisions", !GetAtt RandomString.RandomString]]
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - 'kms:Decrypt'
                  - 'kms:Encrypt'
                Resource: '*'
  KhulnasoftConsoleLogs:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      LogGroupName: !Join ['-', ['/khulnasoft/console', !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
      RetentionInDays: 30
  KhulnasoftGatewayLogs:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      LogGroupName: !Join ['-', ['/khulnasoft/gateway', !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
      RetentionInDays: 30
  KhulnasoftEnforcerLogs:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      LogGroupName: !Join ['-', ['/khulnasoft/enforcer', !Join ["-", ["td", !GetAtt RandomString.RandomString]]]]
      RetentionInDays: 30    
  LBLogsStoreBucket:
    Type: AWS::S3::Bucket
    Properties:
      AccessControl: Private
      BucketName: !Sub
        - ${ECSClusterName2}-lb-accesslogs
        - { ECSClusterName2: !Join ["-", ["s3", !GetAtt RandomString.RandomString]] }
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - BucketKeyEnabled: true
            ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      VersioningConfiguration:
        Status: Enabled
      Tags:
        - Key: BucketType
          Value: Log
    DeletionPolicy: Delete
  LogsBucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref 'LBLogsStoreBucket'
      PolicyDocument:
        Version: '2008-10-17'
        Statement:
          - Sid: ELBAccessLogselbacc
            Effect: Allow
            Resource: !Join ['', [!GetAtt LBLogsStoreBucket.Arn, /*]]
            Principal:
              AWS: !Join ['', ['arn:aws:iam::', !Ref 'AWS::AccountId', ':root']]
            Action: ['s3:PutObject']
          - Sid: ELBAccessLogsServiceACL
            Effect: Allow
            Resource: !GetAtt LBLogsStoreBucket.Arn
            Principal:
              Service: delivery.logs.amazonaws.com
            Action: ['s3:GetBucketAcl']
          - Sid: ELBAccessLogsServicePut
            Effect: Allow
            Resource: !Join ['', [!GetAtt LBLogsStoreBucket.Arn, /*]]
            Principal:
              Service: delivery.logs.amazonaws.com
            Action: ['s3:PutObject']
            Condition:
              StringEquals:
                s3:x-amz-acl: bucket-owner-full-control
  #mysecrets
  SecretU:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: Khulnasoft RDS Username
      Name: !Join ['/', ["KhulnasoftRdsUsername", !GetAtt RandomString.RandomString]]
      SecretString: !Ref KhulnasoftDBUserName
  SecretP:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: Khulnasoft RDS Password
      Name: !Join ['/', ["KhulnasoftRdsPassword", !GetAtt RandomString.RandomString]]
      SecretString: !Ref KhulnasoftDBPassword
  SecretAuditU:
    Condition: CreateAuditrds
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: Audit RDS Username
      Name: !Join ['/', ["AuditRdsUsername", !GetAtt RandomString.RandomString]]
      SecretString: !Ref AuditDBUserName
  SecretAuditP:
    Condition: CreateAuditrds
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: Audit RDS Password
      Name: !Join ['/', ["AuditRdsPassword", !GetAtt RandomString.RandomString]]
      SecretString: !Ref AuditDBPassword
  Secret1:
    Type: AWS::SecretsManager::Secret
    Properties: 
      Description: Khulnasoft batch install token
      Name: !Join ['/', ["KhulnasoftBatchInstallToken", !GetAtt RandomString.RandomString]]
      SecretString:
        !Ref BatchInstallToken
Outputs:
  KhulnasoftConsole:
    Description: URL to access Khulnasoft Security Console
    Value: !Join ["", ['https://', !GetAtt KhulnasoftConsoleLB.DNSName]]
  KhulnasoftGatewayExternalConnection:
    Description: >-
      Khulnasoft Enforcer gateway startup connection string for use when Enforcers are
      external to VPC.
    Value: !Join ["", ['https://', !GetAtt KhulnasoftConsoleLB.DNSName, ":8443"]]
  KhulnasoftConsoleGrpcConnection:
    Description: >-
      DNS to server gRPC
    Value: !Join ["", ['https://', !GetAtt KhulnasoftConsoleLB.DNSName, ":8442"]]
  KhulnasoftEcsTaskRole:
    Description: IAM role assigned to access ECR
    Value: !Ref KhulnasoftEcsTaskRole
  KhulnasoftDBInstanceIdentifier:
    Description : Khulnasoft DB Instance Identifier
    Value : !Ref KhulnasoftDBInstanceEndPointURL
    Export :
      Name : 
        'Fn::Sub': '${AWS::StackName}-Khulnasoft53DBInstanceID'
  KhulnasoftAuditDBInstanceIdentifier:
    Condition: CreateAuditrds
    Description : Khulnasoft audit DB Instance Identifier
    Value : !Ref AuditDBInstanceEndPointURL
    Export :
      Name : 
        'Fn::Sub': '${AWS::StackName}-Khulnasoft53AuditDBInstanceID'
